[package]
name = "zergling"
version = "0.1.0"
authors = ["Jiahao Huang <july2993@gmail.com>"]

[features]
default = []

[dependencies]
protobuf = "1.4"
futures         = "0.1"
futures-cpupool = "0.1"
grpc            = "0.*"
iron = "0.5"
router = "0.5"
log = "0.3"
clap = "2"
grpcio = "0.1"
quick-error = "0.2"
urlencoded = "0.5"
serde_json = "1.0"
serde_derive = "1.0"
serde= "1.0"
rand = "0.3"
hyper = "0.11"
tokio-core = "0.1"
url = "1.5"
env_logger = "0.4"
chrono = "0.4"
byteorder = "1.1"
time = "0.1"
crc = "1.5"
libflate = "0.1"



clippy = {version = "*", optional = true}




