[package]
name = "zergling"
version = "0.1.0"
authors = ["Jiahao Huang <july2993@gmail.com>"]
description = "a object storage system like haystack"
license = "MIT/Apache-2.0"

[features]
default = []
dev =["clippy"]

[dependencies]
protobuf = "1.4"
futures         = "0.1"
grpc            = "0.*"
iron = "0.5"
router = "0.5"
log = "0.3"
clap = "2"
grpcio = "0.1"
quick-error = "0.2"
urlencoded = "0.5"
serde_json = "1.0"
serde_derive = "1.0"
serde= "1.0"
rand = "0.3"
hyper = "0.11"
tokio-core = "0.1"
url = "1.5"
env_logger = "0.4"
chrono = "0.4"
byteorder = "1.1"
time = "0.1"
crc = "1.5"
libflate = "0.1"
multipart = "0.13"
mime_guess = "1.8"
lru = "0.1"
clippy = {version = "*", optional = true}
mime = "0.3"
signal = "0.4"
nix = "0.9"
futures-cpupool = "0.1"
lazy_static = "0.2"
bincode = "0.9"
tempdir = "0.3"


[dependencies.prometheus]
version = "0.3"
default-features = false
features = ["nightly", "push", "process"]


